--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,22 @@
+[bin]
+[obj]
+
+# User-specific files
+*.suo
+*.user
+*.sln.docstates
+
+# Build results
+[Dd]ebug/
+[Dd]ebugPublic/
+[Rr]elease/
+x64/
+build/
+bld/
+[Bb]in/
+[Oo]bj/
+
+
 # Compiled Object files
 *.slo
 *.lo
